[gd_scene load_steps=12 format=3 uid="uid://kfuf7grbl6e0"]

[ext_resource type="Script" path="res://Scripts/Interactables/TreasureChest/TreasureChest.gd" id="1_656fx"]
[ext_resource type="Texture2D" uid="uid://bod4ve6nvot1q" path="res://Assets/19.07c - Treasure Chests 1.2a/treasure chests.png" id="2_1s4rd"]
[ext_resource type="Texture2D" uid="uid://dddpl3tbc8pi3" path="res://Assets/Tiny Swords (Update 010)/Deco/01.png" id="3_07d5d"]
[ext_resource type="PackedScene" uid="uid://bvde6jiut4pih" path="res://Scenes/Level/InteractableArea.tscn" id="4_7guql"]
[ext_resource type="PackedScene" uid="uid://mj68w2koetf3" path="res://Scenes/General/PersistentDataHandler/PersistentDataHandler.tscn" id="5_wyri5"]

[sub_resource type="Animation" id="Animation_ug7ri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ItemSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qmb8u"]
resource_name = "closed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wwhyx"]
resource_name = "open_chest"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ItemSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 1.5),
"transitions": PackedFloat32Array(0.5, -2, 2, 1),
"update": 0,
"values": [Vector2(-1, -6), Vector2(-1, -60), Vector2(-1, -25), Vector2(-1, -25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemSprite:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_05fc0"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l2lu4"]
_data = {
"RESET": SubResource("Animation_ug7ri"),
"closed": SubResource("Animation_qmb8u"),
"open_chest": SubResource("Animation_wwhyx"),
"opened": SubResource("Animation_05fc0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oluv"]
size = Vector2(20, 7.5)

[node name="TreasureChest" type="Node2D"]
z_index = 2
y_sort_enabled = true
scale = Vector2(0.5, 0.5)
script = ExtResource("1_656fx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_1s4rd")
hframes = 5
vframes = 6

[node name="ItemSprite" type="Sprite2D" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(-1, -6)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_07d5d")

[node name="Label" type="Label" parent="ItemSprite"]
offset_left = 11.6667
offset_top = -13.3333
offset_right = 51.6667
offset_bottom = 12.6667
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 12
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "closed"
libraries = {
"": SubResource("AnimationLibrary_l2lu4")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 2.75)
shape = SubResource("RectangleShape2D_6oluv")

[node name="InteractableArea" parent="." instance=ExtResource("4_7guql")]
position = Vector2(0, 11)
container = true

[node name="IsOpen" parent="." instance=ExtResource("5_wyri5")]
